--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <h1>💝Welcome Tabbu💝</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Birthday Greeting</a></li>
+                <li><a href="index.html">Birthday Message</a></li>
                 <li><a href="home.html">Home</a></li>
             </ul>
         </nav>
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <p>&copy; All rights reserved.</p>
+        <p>&copy; @syed All rights reserved.</p>
     </footer>
 </body>
 
