--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <h1>💝Welcome Tabbu💝</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Birthday Message</a></li>
+                <li><a href="./html files/index.html">Birthday Message</a></li>
                 <li><a href="home.html">Home</a></li>
             </ul>
         </nav>
