changed home.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <title>National scholarship-2024</title>
+    <title>national scholarship portal</title>
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +20,8 @@
         <h1>💝Welcome Tabbu💝</h1>
         <nav>
             <ul>
-                <li><a href="./html files/index.html">Birthday Message</a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="./html files/bday.html">Birthday Message</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <p>&copy; @syed All rights reserved.</p>
+        <p>&copy; All rights reserved. @syed </p>
     </footer>
 </body>
 
