finished bday and home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>💝Welcome Tabbu💝</h1>
         <nav>
             <ul>
-                <li><a href="./html files/bday.html">Birthday Message</a></li>
+                <li><a href="bday.html">Birthday Message</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
