alert removed from password

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <link rel="stylesheet" href="./style/main.css"/>
     <script>
         // Password protection
-        const password = "paglu"; // Set your desired password here
+        const password = "7013"; // Set your desired password here
         let userPassword = prompt("Please enter the password to access this page:");
     
         if (userPassword !== password) {
-            alert("Welcome");
             window.location.href = "https://scholarships.gov.in/"; // Redirect to a blank page or any other page
         }
     </script>
