--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./style/main.css"/>
     <script>
         // Password protection
-        const password = "7013"; // Set your desired password here
+        const password = "paglu"; // Set your desired password here
         let userPassword = prompt("Please enter the password to access this page:");
     
         if (userPassword !== password) {
