--- a/bday.html
+++ b/bday.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <audio class="song" loop autoplay>
+    <audio class="song">
         <source src="./music/hbd.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
