--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Meesho Clone - Home Page</title>
+    <link rel="shortcut icon" type="image/png" href="assets/meeshoLogo.svg" />
+    <title>Meesho - Home Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
